# Air-Wave

./: .cursorrules  .gitignore  ANALYSIS_COMPLETE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  Justfile  README.md  TESTING_ACTION_CHECKLIST.md  UNIT_TESTS_STATUS.md  check_casing.py  check_db_state.py  check_schema.py  diagnose_flow.py  diagnose_matching.py  docker-compose.yml  start-dev.ps1  test_phase0_endpoints.py  test_scan_debug.py
backend/: .dockerignore  .gitignore  Dockerfile  MIGRATION_FIX_SUMMARY.md  README.md  alembic.ini  coverage.txt  pyproject.toml  test_migration_fix.py  test_out.txt
backend/alembic/: env.py
backend/alembic/versions/: 014b1562348a_add_indexes_for_navigation.py  0eb320d840c1_add_indexes_for_navigation.py  4489d4180af6_add_system_settings_retry.py  5d385d1f088d_add_identity_resolution_models.py  9066bd9d27ae_add_composite_indexes_for_scanner_.py  a43de339102a_add_discoveryqueue_and_is_verified.py  add_artist_display_name.py  add_artist_musicbrainz_id.py  add_library_file_mtime.py  add_station_format_code.py  add_verification_audit_and_is_revoked.py  cfc31820018f_add_match_reason.py  drop_recording_id_columns_phase4.py  phase1_identity_resolution_work_linking.py  phase2_backfill_work_ids.py
backend/data/: airwave.db-shm  airwave_test.db  airwave_test.db-shm  airwave_test.db-wal
backend/data/chroma/b884c3f1-e29d-4006-9d6b-baf443d80b1e/: index_metadata.pickle
backend/docs/: LOGGING_AUDIT_AND_RECOMMENDATIONS.md  artist-display-names-qa-assessment.md  artist-display-names.md  migration-stale-inspector-fix.md
backend/scripts/: audit_deduplication.py  cleanup_ghost_recordings.py  clear_db.py  debug_path_mismatch.py  diagnose_scanner_paths.py  init_db.py  reset_db_schema.py
backend/src/airwave/: __init__.py
backend/src/airwave/api/: __init__.py  deps.py  main.py  schemas.py
backend/src/airwave/core/: cache.py  config.py  db.py  logger.py  models.py  normalization.py  performance.py  scanner_config.py  stats.py  task_store.py  utils.py  vector_db.py
backend/src/airwave/scripts/: README_parse_radio_logs.md  __init__.py  audit_deduplication.py  backfill_artist_display_names.py  backfill_work_ids.py  bulk_import.py  cleanup_ghost_recordings.py  clear_db.py  debug_search.py  find_artists_with_collab_keywords.py  init_db.py  parse_radio_logs.py
backend/src/airwave/services/: __init__.py  match_quality.py
backend/src/airwave/worker/: __init__.py  bulk_import.py  fingerprint.py  identity_resolver.py  importer.py  main.py  matcher.py  musicbrainz_client.py  recording_resolver.py  scan_library.py  scanner.py  seed.py
backend/tests/: conftest.py  debug_search.py  test_scanner_race_conditions.py  test_task_store.py
backend/tests/alembic/: test_migration_display_name.py  test_migration_identity_resolution_phase1.py  test_migration_identity_resolution_phase2.py  test_migration_proposed_splits.py
backend/tests/api/: test_admin.py  test_analytics.py  test_bridges.py  test_discovery.py  test_export.py  test_identity.py  test_library.py  test_match_tuner.py  test_preferences.py  test_search.py  test_search_normalization.py  test_stations.py  test_system.py
backend/tests/core/: test_cache.py  test_config.py  test_db.py  test_normalization.py  test_task_store.py  test_utils.py  test_vector_db_comprehensive.py
backend/tests/integration/: test_enhanced_normalization_matching.py  test_epic_1_end_to_end.py  test_epic_2_bulk_matching.py  test_epic_2_matching.py  test_epic_2_stations_api.py  test_epic_2_vector_db.py  test_epic_3_verification.py  test_epic_4_identity.py  test_epic_5_export.py  test_library_navigation.py  test_work_grouping.py
backend/tests/performance/: README.md  __init__.py  cache_analysis.py  load_test.py  test_search_triage.py  test_work_grouping_performance.py
backend/tests/scripts/: test_backfill_artist_display_names.py
backend/tests/worker/: test_fingerprint.py  test_identity_resolver.py  test_importer.py  test_matcher.py  test_matcher_comprehensive.py  test_matcher_multi_artist.py  test_medium_confidence.py  test_musicbrainz_client.py  test_recording_resolver.py  test_scanner.py  test_scanner_cancellation.py  test_scanner_commit_optimization.py  test_scanner_comprehensive.py  test_scanner_display_names.py  test_scanner_edge_cases.py  test_scanner_error_handling.py  test_scanner_fuzzy_matching.py  test_scanner_helpers.py  test_scanner_mbid_and_metadata.py  test_scanner_move_cache_orphan.py  test_scanner_parallel_processing.py  test_scanner_part_detection.py  test_scanner_performance_monitoring.py  test_scanner_race_conditions.py  test_scanner_session_state.py  test_seed.py
docs/: CHANGELOG.md  (+13 more)
(+129 files in other folders)
