[tool.poetry]
name = "airwave"
version = "0.1.0"
description = "Radio log analysis and playback engine."
authors = ["Lance <lance@example.com>"]
readme = "README.md"
packages = [{include = "airwave", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
aiosqlite = "^0.19.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
# ChromaDB will be added later if needed, keeping it minimal for now
chromadb = "^1.4.1"
sentence-transformers = "^5.2.0"
mutagen = "^1.47.0"
pyacoustid = "^1.3.0"
python-multipart = "^0.0.22"
blake3 = "^1.0.8"
alembic = "^1.18.1"
duckdb = "^1.4.4"
polars = "^1.4.0"
aiohttp = "^3.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
ruff = "^0.1.14"
mypy = "^1.8.0"
httpx = "^0.28.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/worker/main.py",  # Celery entrypoint (low coverage expected)
    "*/scripts/*.py",    # CLI scripts (not part of library coverage)
]

[tool.coverage.report]
# Exclude lines that are hard to test or not critical
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
# Fail if coverage drops below this threshold (can be increased as coverage improves)
fail_under = 70
precision = 2
show_missing = true
skip_covered = false
skip_empty = true

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
# Google style guide enforces 80 chars, but allows 100 in some cases. 
# We stick to the strict 80 for this project.
line-length = 80

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming (snake_case, PascalCase, etc.)
    "D",   # pydocstyle (docstrings)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
]

ignore = [
    "D203", # Conflict: 1 blank line before class (Google prefers D211)
    "D213", # Conflict: Multi-line docstring summary start (Google prefers D212)
]

[tool.ruff.lint.pydocstyle]
# This is critical for Google Style Guide compliance
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10